{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 33,
  "lineage": "db7248d2-4257-d41e-b8c5-d85c55b23014",
  "resources": [
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "publicRouteTable",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:route-table/rtb-085ab009f355ffeb2",
            "default_route_table_id": "rtb-085ab009f355ffeb2",
            "id": "rtb-085ab009f355ffeb2",
            "owner_id": "730335210335",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca603a8f5179701d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7b3604122e534a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.environment.aws_internet_gateway.myVpcInternetGateway",
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024de4680f713b0ad",
            "association_id": "eipassoc-0c09e033a7f526181",
            "domain": "vpc",
            "id": "eipalloc-024de4680f713b0ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0141b6c6db3dd3ffd",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-3-209-47-126.compute-1.amazonaws.com",
            "public_ip": "3.209.47.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myVPCElasticIP"
            },
            "tags_all": {
              "Name": "myVPCElasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2wiki",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:730335210335:instance/i-02ad6f92b9e305cee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ad6f92b9e305cee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09288c06906b4198d",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "public_ip": "3.239.170.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d31f75096167b6cd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00468e7981f592c1e",
            "tags": {
              "Name": "mediawiki-1"
            },
            "tags_all": {
              "Name": "mediawiki-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8713989b5442ce5"
            ]
          },
          "dependencies": [
            "module.environment.aws_security_group.sg",
            "module.environment.aws_subnet.publicSubnet",
            "module.environment.aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:730335210335:instance/i-099a483d7bb148fe3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099a483d7bb148fe3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd1a902bb6f79866",
            "private_dns": "ip-10-0-3-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.85",
            "public_ip": "54.90.192.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0452baaa12664337a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6bde436a77cd439",
            "tags": {
              "Name": "mediawiki-2"
            },
            "tags_all": {
              "Name": "mediawiki-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8713989b5442ce5"
            ]
          },
          "dependencies": [
            "module.environment.aws_security_group.sg",
            "module.environment.aws_subnet.publicSubnet",
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myVpcInternetGateway",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:internet-gateway/igw-0ca603a8f5179701d",
            "id": "igw-0ca603a8f5179701d",
            "owner_id": "730335210335",
            "tags": {
              "Name": "myVPCGateway"
            },
            "tags_all": {
              "Name": "myVPCGateway"
            },
            "vpc_id": "vpc-06e7b3604122e534a"
          },
          "dependencies": [
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myVpcNatGateway",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024de4680f713b0ad",
            "association_id": "eipassoc-0c09e033a7f526181",
            "connectivity_type": "public",
            "id": "nat-0cab43b3f6d9abf3b",
            "network_interface_id": "eni-0141b6c6db3dd3ffd",
            "private_ip": "10.0.1.198",
            "public_ip": "3.209.47.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00468e7981f592c1e",
            "tags": {
              "Name": "myNATGateway"
            },
            "tags_all": {
              "Name": "myNATGateway"
            }
          },
          "dependencies": [
            "module.environment.aws_eip.eip",
            "module.environment.aws_subnet.publicSubnet",
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRouteTableAssociation",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0516e4483b94f470f",
            "route_table_id": "rtb-085ab009f355ffeb2",
            "subnet_id": "subnet-00468e7981f592c1e"
          },
          "dependencies": [
            "module.environment.aws_subnet.publicSubnet",
            "module.environment.aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210edfc3361a140e",
            "route_table_id": "rtb-085ab009f355ffeb2",
            "subnet_id": "subnet-0f6bde436a77cd439"
          },
          "dependencies": [
            "module.environment.aws_subnet.publicSubnet",
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:security-group/sg-0a8713989b5442ce5",
            "description": "Security group for Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8713989b5442ce5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_ssh_http",
            "name_prefix": "",
            "owner_id": "730335210335",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e7b3604122e534a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:subnet/subnet-00468e7981f592c1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00468e7981f592c1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335210335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-06e7b3604122e534a"
          },
          "dependencies": [
            "module.environment.aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:subnet/subnet-0f6bde436a77cd439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6bde436a77cd439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335210335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-06e7b3604122e534a"
          },
          "dependencies": [
            "module.environment.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.environment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "module.environment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335210335:vpc/vpc-06e7b3604122e534a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8673dbe409ec996",
            "default_route_table_id": "rtb-085ab009f355ffeb2",
            "default_security_group_id": "sg-0c450e8e304c5bd5b",
            "dhcp_options_id": "dopt-0d41ea8369be5b07a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e7b3604122e534a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085ab009f355ffeb2",
            "owner_id": "730335210335",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}